# coine-aamas-2026

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
experiments/: README.md  bench_one.py  benchmark.sh  plot_benchmark.py
experiments/scenarios/example/: README.md  run.py  simple_net.pnml
experiments/scenarios/foosball/: foosball.pnml  generate_pnml.py  run.py
experiments/scenarios/football/: football.pnml  generate_pnml.py  run.py
experiments/scenarios/football-2team/: football-2team.pnml  generate_pnml.py  run.py
experiments/scenarios/fork-join/: fork_join.pnml  run.py
experiments/scenarios/fuzzball/: fuzzball.pnml  run.py
experiments/scenarios/sequential/: run.py  sequential.pnml
src/lib/: __init__.py  analysis.py  io.py  viz.py
